Containerization/Istio/YAML/change-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: addheader-into-ingressgateway
  namespace: istio-system
spec:
  workloadSelector:
    # select by label in the same namespace
    labels:
      istio: ingressgateway
  configPatches:
    # The Envoy config you want to modify
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              # 新版本改名为：envoy.filters.network.http_connection_manager，下面的名字已弃用。
              name: "envoy.http_connection_manager"
              subFilter:
                # 新版本改名为：envoy.filters.http.router，下面的名字已弃用。
                name: "envoy.router"
      patch:
        operation: INSERT_BEFORE
        value: # lua filter specification
          name: envoy.filters.http.lua
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            inlineCode: |-
              function envoy_on_request(request_handle)
                  local xff_header = request_handle:headers():get("X-Forwarded-For")
                  local first_ip = string.gmatch(xff_header, "(%d+.%d+.%d+.%d+)")();
                  first_ip = string.gsub(first_ip, ",", "")
                  request_handle:headers():add("X-Custom-User-IP", first_ip);
                  request_handle:headers():add("X-Test-User-IP", "1.1.1.1");
                end
              function envoy_on_response(response_handle)
                  function hasFrameAncestors(rh)
                  s = rh:headers():get("Content-Security-Policy");
                  delimiter = ";";
                  defined = false;
                  for match in (s..delimiter):gmatch("(.-)"..delimiter) do
                      match = match:gsub("%s+", "");
                      if match:sub(1, 15)=="frame-ancestors" then
                      return true;
                      end
                  end
                  return false;
                  end
                  if not response_handle:headers():get("Content-Security-Policy") then
                  csp = "frame-ancestors none;";
                  response_handle:headers():add("Content-Security-Policy", csp);
                  elseif response_handle:headers():get("Content-Security-Policy") then
                  if not hasFrameAncestors(response_handle) then
                      csp = response_handle:headers():get("Content-Security-Policy");
                      csp = csp .. ";frame-ancestors none;";
                      response_handle:headers():replace("Content-Security-Policy", csp);
                  end
                  end
                  if not response_handle:headers():get("X-XSS-Protection") then
                  response_handle:headers():add("X-XSS-Protection", "1; mode=block");
                  end
                  if not response_handle:headers():get("X-Content-Type-Options") then
                  response_handle:headers():add("X-Content-Type-Options", "nosniff");
                  end
                  if not response_handle:headers():get("X-Download-Options") then
                  response_handle:headers():add("X-Download-Options", "noopen");
                  end
                  if not response_handle:headers():get("X-DNS-Prefetch-Control") then
                  response_handle:headers():add("X-DNS-Prefetch-Control", "off");
                  end
                  if not response_handle:headers():get("X-Contain") then
                  response_handle:headers():add("X-Container", os.getenv("HOSTNAME"));
                  end
                  if not response_handle:headers():get("X-Forwarded-For") then
                  response_handle:headers():add("X-Forwarded-For-test", "off");
                  end
                  if not response_handle:headers():get("slogan") then
                  response_handle:headers():add("slogan", "You are my sunshine!");
                  end
                  if not response_handle:headers():get("Feature-Policy") then
                  response_handle:headers():add("Feature-Policy",
                                                  "camera 'none';"..
                                                  "microphone 'none';"..
                                                  "geolocation 'none';"..
                                                  "encrypted-media 'none';"..
                                                  "payment 'none';"..
                                                  "speaker 'none';"..
                                                  "usb 'none';");
                  end
                  if response_handle:headers():get("X-Powered-By") then
                  response_handle:headers():remove("X-Powered-By");
                  end
              end
