Containerization/Istio/YAML/xff.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: xff
  namespace: istio-system
spec:
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: ANY
        listener:
          filterChain:
            filter:
              # 新版本改名为：envoy.filters.network.http_connection_manager，下面的名字已弃用。
              name: "envoy.http_connection_manager"
      patch:
        operation: MERGE
        value:
          typed_config:
            # 新版本改名为："@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager，下面的名字已弃用。
            "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager"
            use_remote_address: true
            xff_num_trusted_hops: 1
            skip_xff_append: false
            server_name: 'SomethingServer'
